# eg-dis-product-back

./: .gitignore  pyproject.toml
api/api/: settings.py  urls.py
api/product/: models.py  serializers.py  urls.py  views.py
api/product/migrations/: 0001_initial.py
